--- a/client/src/components/MovieList/MovieCard/_movieCard.scss
+++ b/client/src/components/MovieList/MovieCard/_movieCard.scss
@@ -3,6 +3,7 @@
   position: relative;
   user-select: none;
   border-radius: var(--border-radius-1);
+  //box-shadow: 0 1px 5px #000;
 
   &--image {
     position: relative;
