--- a/client/src/components/Reviews/Review/_review.scss
+++ b/client/src/components/Reviews/Review/_review.scss
@@ -37,8 +37,8 @@
 
   .rating-review {
     margin-left: 2rem;
-    align-items: start;
-    justify-content: start;
+    align-items: flex-start;
+    //justify-content: center;
 
     p {
       margin: 0;
@@ -60,6 +60,11 @@
     }
   }
 }
+
+// .review__container:hover {
+//   filter: brightness(80%);
+//   transition: var(--transition);
+// }
 
 @media screen and (max-width: 1280px) {
   .review__container {
