--- a/client/src/components/SearchResults/_searchResults.scss
+++ b/client/src/components/SearchResults/_searchResults.scss
@@ -6,6 +6,7 @@
   overflow-y: scroll;
   border-radius: var(--border-radius-1);
   box-shadow: 0 3px 10px #000;
+  text-decoration: none;
 
   //border: 2px solid var(--primary);
 
@@ -13,6 +14,7 @@
     display: flex;
     flex-direction: column;
     padding: 0.5rem;
+    text-decoration: none;
 
     &__card {
       cursor: pointer;
@@ -21,6 +23,7 @@
       border-radius: var(--border-radius-1);
       box-shadow: 0px 12px 10px -15px #000;
       margin-bottom: 0.5rem;
+      text-decoration: none;
 
       &__image {
         height: 75px;
@@ -41,12 +44,14 @@
           font-size: 1rem;
           font-weight: 500;
           margin-bottom: 0.25rem;
+          text-decoration: none;
         }
 
         span:last-child {
           font-size: 1rem;
           font-weight: 400;
-          color: #999;
+          color: rgb(156, 156, 156);
+          text-decoration: none;
         }
       }
     }
