--- a/client/src/components/CastBackdropsVideo/Backdrops/_backdrops.scss
+++ b/client/src/components/CastBackdropsVideo/Backdrops/_backdrops.scss
@@ -10,6 +10,12 @@
   padding: 2rem 0rem 2rem 0;
   display: flex;
   overflow-x: auto;
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
   min-height: 100px;
+}
+
+@media screen and (max-width: 786px) {
+  .backdrops {
+    margin-bottom: 2rem;
+  }
 }
