--- a/client/src/components/MovieInfo/_movieInfo.scss
+++ b/client/src/components/MovieInfo/_movieInfo.scss
@@ -3,7 +3,7 @@
   width: 95%;
   min-height: 100vh;
   margin: 0 2.5%;
-  padding-bottom: 3rem;
+  padding-bottom: 5rem;
 
   &__detail {
     padding: calc(58.4px + 2rem) 0 2rem 0;
@@ -13,7 +13,6 @@
 
     &__one {
       display: flex;
-      //flex-direction: column;
       justify-content: space-between;
 
       &__title-tgline {
@@ -27,7 +26,6 @@
 
         .tagline {
           font-family: Verdana, Geneva, Tahoma, sans-serif;
-          //display: none;
           font-weight: 500;
           font-size: 1rem;
         }
@@ -141,6 +139,7 @@
 
     &--image-1 {
       display: none;
+      height: 95%;
     }
 
     &__rating {
@@ -312,7 +311,6 @@
         }
 
         &__date-time {
-
           .date,
           .time {
             font-weight: 400;
@@ -323,7 +321,7 @@
     }
 
     &__image__video {
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
 
       &__player {
         height: 250px;
@@ -359,17 +357,17 @@
       }
 
       &--image-1 {
+        position: relative;
         display: block;
         margin-bottom: 2rem;
         margin-right: 0;
         width: 100%;
-        //height: 00px;
-        object-fit: cover;
+        height: 300px;
         border-radius: var(--border-radius-1);
 
         img {
           width: 100%;
-          //height: 00px;
+          height: 100%;
           object-fit: cover;
           border-radius: var(--border-radius-1);
         }
