--- a/client/src/components/Reviews/_reviews.scss
+++ b/client/src/components/Reviews/_reviews.scss
@@ -31,6 +31,12 @@
     }
   }
 
+  &__title:hover .icon {
+    //color: var(--primary);
+    transform: translateX(40%) scale(1.25);
+    transition: var(--transition);
+  }
+
   &__container {
     display: flex;
     flex-direction: column;
@@ -42,5 +48,24 @@
 @media screen and (max-width: 786px) {
   .reviews {
     padding: 0rem 1rem;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .reviews {
+    padding: 0rem 1rem;
+
+    &__title {
+      font-size: 1.2rem;
+
+      .length {
+        height: 30px;
+        width: 30px;
+
+        span {
+          font-size: 0.7rem;
+        }
+      }
+    }
   }
 }
