--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -55,7 +55,7 @@
         span {
           font-size: 1.3rem;
           position: absolute;
-          top: 48%;
+          top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
         }
@@ -174,8 +174,9 @@
           p,
           a,
           span {
-            font-size: 0.9rem;
+            font-size: 0.8rem;
             margin-right: 1rem;
+            padding: 0.25rem 0.5rem;
           }
         }
       }
@@ -191,7 +192,8 @@
           a,
           span {
             margin-right: 1rem;
-            font-size: 0.9rem;
+            font-size: 0.8rem;
+            padding: 0.25rem 0.5rem;
           }
         }
       }
