--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -187,6 +187,7 @@
         &__inner {
           display: grid;
           grid-template-columns: repeat(auto-fill, minmax(155px, 2fr));
+          grid-template-columns: repeat(3, 1fr);
 
           p,
           a,
