--- a/client/src/components/CastBackdropsVideo/Cast/Actor/_actor.scss
+++ b/client/src/components/CastBackdropsVideo/Cast/Actor/_actor.scss
@@ -54,6 +54,7 @@
       margin: 0;
       width: 150px;
       height: 150px;
+      margin-bottom: 0.5rem;
 
       .img {
         width: 150px;
@@ -87,7 +88,7 @@
     //padding: 0;
 
     &__image {
-      margin: 0;
+      //margin: 0;
       width: 150px;
       height: 150px;
 
