--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -11,6 +11,7 @@
   align-items: center;
   flex-direction: column;
   transform: translateY(-120%);
+  transform: translateX(unset);
   transition: var(--transition);
 
   &__inner {
@@ -31,7 +32,7 @@
       margin-bottom: 2rem;
 
       .title {
-        padding: 0.1rem 0.5rem;
+        padding: 0.25rem 0.5rem;
         text-align: center;
         position: relative;
         text-decoration: none;
@@ -151,7 +152,13 @@
 
 @media screen and (max-width: 640px) {
   .menu {
+    align-items: flex-start;
+
+    transform: translateY(unset);
+    transform: translateX(-120%);
+
     &__inner {
+      width: 50%;
       min-height: 100vh;
 
       .title-close {
@@ -192,7 +199,7 @@
         &__inner {
           display: grid;
           grid-template-columns: repeat(auto-fill, minmax(155px, 2fr));
-          grid-template-columns: repeat(2, 1fr);
+          //grid-template-columns: repeat(1, 1fr);
 
           p,
           a,
