--- a/client/src/components/MovieInfo/_movieInfo.scss
+++ b/client/src/components/MovieInfo/_movieInfo.scss
@@ -1,7 +1,7 @@
 .info {
   position: relative;
   width: 95%;
-  min-height: 100vh;
+  //min-height: 100vh;
   margin: 0 2.5%;
   padding-bottom: 4rem;
 
